# Cell_Shading

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CascadedShadow.cpp  CascadedShadow.h  Display_template.cpp  Display_template.h  Helper.cpp  Helper.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shadow.cpp  Shadow.h  Skybox.cpp  Skybox.h  Vector.cpp  Vector3.h  callback.cpp  callback.h  imgui.ini  main.cpp  main.h  matrix4.cpp  matrix4.h  misc.cpp  misc.h  particles.cpp  particles.h  program.cpp  program.h  windfall_objects.cpp  windfall_objects.h
examples/: backpack.cpp  backpack.h  bomb_shop.cpp  bomb_shop.h  camera.cpp  camera.h  cavern.cpp  cavern.h  colors.cpp  colors.h  coordinates.cpp  coordinates.h  gouraud.cpp  gouraud.h  house_of_wealth.cpp  house_of_wealth.h  isometric_world.cpp  isometric_world.h  light_map.cpp  light_map.h  link.cpp  link.h  multiples_lights.cpp  multiples_lights.h  nordic_village.cpp  nordic_village.h  phong.cpp  phong.h  shadow.cpp  shadow.h  skybox.cpp  skybox.h  texture.cpp  texture.h  windfall.cpp  windfall.h
models/: cube.fbx
models/Auction House/model_hd/: model1.mtl
models/Bomb_Shop/: Bomb shop.mtl
models/Ganondorf Figurine/: 133.mtl
models/isometric_world/isometric-world/source/: auto.blend.mtl
models/link-cartoon/source/: LinkCartoon.fbx
shaders/: compute_particles.glsl  fragment_backpack.glsl  fragment_black.glsl  fragment_clouds.glsl  fragment_colors.glsl  fragment_coordinates.glsl  fragment_cube.glsl  fragment_display_particles.glsl  fragment_gouraud.glsl  fragment_light.glsl  fragment_light_map.glsl  fragment_link.glsl  fragment_model.glsl  fragment_multiples_lights.glsl  fragment_normals.glsl  fragment_phong.glsl  fragment_quad_depth.glsl  fragment_render_particles.glsl  fragment_shadow.glsl  fragment_shadow_depth.glsl  fragment_shadow_mapping.glsl  fragment_shore.glsl  fragment_skybox.glsl  fragment_sun.glsl  fragment_texture.glsl  fragment_water.glsl  fragment_wave.glsl  fragment_wind.glsl  fragment_windfall.glsl  geometry_normals.glsl  geometry_wind.glsl  vertex_clouds.glsl  vertex_colors.glsl  vertex_coordinates.glsl  vertex_cube.glsl  vertex_display_particles.glsl  vertex_gouraud.glsl  vertex_light_map.glsl  vertex_link.glsl  vertex_model.glsl  (+14 more)
